01/30/2014 set ALCTtx drive setting back to UCLA standard, also changes to DPS clocks (9 DPS -> 4 DPS w/BUFG feedbacks) 02/10/2014 use ODDR to bring out clock, alct_rxclock, alct_txclock on testled 1:3 02/12/2014 bring out alct_rx_posneg & alct_tx_posneg  on testled 5 & 7;  modify clk feedback circuit            in clock_ctrl.v: exchange names CLOCK --> CLOCK_FB   and   CLOCK_DPS --> CLOCK 02/16/2014 tuned logic for clock_lac & changed inputs to ODDR's for ALCT Tx (now "Same Edge") 04/03/2014 merge Jason's changes from above with Yuriy's code for extended MPC results register in VME

--- a/source/otmb_pinout.ucf
+++ b/source/otmb_pinout.ucf
@@ -769,12 +769,20 @@ NET "mez_done"				PULLDOWN;
 # TMB Output Port Drive
 #----------------------------------------------------------------------------------------------------------
 # CFEB
-NET "cfeb_clock_en<*>"		SLEW=FAST | DRIVE=4;
+NET "cfeb_clock_en<*>"			SLEW=FAST | DRIVE=4;
 NET "cfeb_oe"				SLEW=FAST | DRIVE=4;
 
 # ALCT 80MHz rx,txa,txb
-NET "alct_txa<*>"			IOSTANDARD=LVDCI_25;
-NET "alct_txb<*>"			IOSTANDARD=LVDCI_25;
+NET "alct_txa<*>"			IOSTANDARD=LVDCI_25; # UCLA original settings
+NET "alct_txb<*>"			IOSTANDARD=LVDCI_25; 
+#NET "alct_txa<*>"			IOSTANDARD=LVDCI_25 | SLEW=FAST | DRIVE=16; # used for ver's 0108-01112014
+#NET "alct_txb<*>"			IOSTANDARD=LVDCI_25 | SLEW=FAST | DRIVE=16; 
+#  first try 4mA in ver 01082014.... later 8,16,6
+#  try 8mA in ver 01092014
+
+#  JRG: other ideas to try...  drive 4,6,8    slew=fast     try with LVDCI_25 & LVCMOS25 too
+#NET "alct_txa<*>"			IOSTANDARD=LVCMOS25 | SLEW=FAST | DRIVE=4;   # LVCMOS25 is default io_standard, ver 01202014
+#NET "alct_txb<*>"			IOSTANDARD=LVCMOS25 | SLEW=FAST | DRIVE=4;   # LVCMOS25 is default io_standard
 
 #ALCT static
 NET "alct_clock_en"			SLEW=FAST | DRIVE=4;
