Changes made by Jason to gtx

--- a/source/otmb_pinout.ucf
+++ b/source/otmb_pinout.ucf
@@ -510,11 +510,11 @@ NET "dmb_tx<43>"	LOC = "T31";	# I/O_437
 NET "dmb_tx<42>"	LOC = "B8";	  # I/O_438 ** Dual use output: BPI Flash PROM Address Input A05
 NET "dmb_tx<41>"	LOC = "C10";	# I/O_439 ** Dual use output: BPI Flash PROM Address Input A13
 
-# Uncoment the following two lines for "Pre-production" version
+# Uncomment the following two lines for "Pre-production" version
 #NET "dmb_tx<40>"	LOC = "C9";    # Pre-production: I/O_440
 #NET "dmb_tx<39>"	LOC = "W32";   # Pre-production: I/O_441
 
-# Coment the following two lines for "Production" version
+# Comment the following two lines for "Production" version
 NET "dmb_tx<40>"	LOC = "W32";  # Production: I/O_440
 NET "dmb_tx<39>"	LOC = "C9";   # Production: I/O_441  ** Dual use output: BPI Flash PROM Address Input A11
 
@@ -611,7 +611,7 @@ NET "led_fp<5>"		LOC = "H25";	# I/O_526	** Dual use output: BPI Flash PROM Data 
 NET "led_fp<6>"		LOC = "P24";	# I/O_527	** Dual use output: BPI Flash PROM Data D06
 NET "led_fp<7>"		LOC = "R24";	# I/O_528	** Dual use output: BPI Flash PROM Data D07
 
-NET "tmb_clock0"  	LOC = "B31";	# GCLK19P
+NET "tmb_clock0"  	LOC = "B31";	# GCLK19P  JRG: this is really tmb_clock05p on the baseboard!  *stoppable*
 NET "tmb_clock1"  	LOC = "K24";	# GCLK1-6P
 NET "alct_rxclock"	LOC = "L23";	# GCLK2-0P
 NET "dcc_clock"   	LOC = "H28";	# GCLK3-2P
@@ -678,7 +678,7 @@ NET "qpll_nrst"		LOC = "U30";
 NET "qpll_lock"		LOC = "M22";
 NET "qpll_err"		LOC = "F21";
 
-# CCLD-033 crystal
+# CCLD-033 crystal  JRG: not present in production boards
 NET "clk125p"		LOC = "J9";	# Signal for Finisar, not needed for final Mezz boards, will be a FREE pin
 NET "clk125n"		LOC = "H9";	# Signal for Finisar, not needed for final Mezz boards, will be a FREE pin
 
@@ -706,33 +706,55 @@ NET "bpi_cs" LOC = "Y24"; # // BPI Flash PROM Chip Enable
 #-------------------------------------------------------------------------------------------------------------------
 # SNAP12 receivers
 #-------------------------------------------------------------------------------------------------------------------
-# Snap fiber1 mgt: gtx4/rx1
+# Snap fiber2 mgt: gtx4/rx1
 NET "rxp[0]"		LOC = AM5 | IOSTANDARD = "LVDS_25";	# MGTRXP1_112
 NET "rxn[0]"		LOC = AM6 | IOSTANDARD = "LVDS_25";	# MGTRXN1_112
 
-# Snap fiber2 mgt: gtx7/rx2
+# Snap fiber3 mgt: gtx7/rx2
 NET "rxp[1]"		LOC = AL3 | IOSTANDARD = "LVDS_25";	# MGTRXP2_112
 NET "rxn[1]"		LOC = AL4 | IOSTANDARD = "LVDS_25";	# MGTRXN2_112
 
-# Snap fiber3 mgt: gtx8/rx3
+# Snap fiber4 mgt: gtx8/rx3
 NET "rxp[2]"		LOC = AJ3 | IOSTANDARD = "LVDS_25";	# MGTRXP3_112
 NET "rxn[2]"		LOC = AJ4 | IOSTANDARD = "LVDS_25";	# MGTRXN3_112
 
-# Snap fiber4 mgt: gtx9/rx8
+# Snap fiber9 mgt: gtx9/rx8
 NET "rxp[3]"		LOC = AA3 | IOSTANDARD = "LVDS_25";	# MGTRXP0_114
 NET "rxn[3]"		LOC = AA4 | IOSTANDARD = "LVDS_25";	# MGTRXN0_114
 
-# Snap fiber5 mgt: gtx10/rx9
-NET "rxp[4]"		LOC = W3  | IOSTANDARD = "LVDS_25"; # MGTRXP1_114	RX p|n swapped at snap12 end
+# Snap fiber10 mgt: gtx10/rx9
+NET "rxp[4]"		LOC = W3  | IOSTANDARD = "LVDS_25";     # MGTRXP1_114	RX p|n swapped at snap12 end
 NET "rxn[4]"		LOC = W4  | IOSTANDARD = "LVDS_25";	# MGTRXN1_114	RX p|n swapped at snap12 end
 
-# Snap fiber6 mgt: gtx11/rx10
-NET "rxp[5]"		LOC = U3  | IOSTANDARD = "LVDS_25"; # MGTRXP2_114	RX p|n swapped at snap12 end
-NET "rxn[5]"		LOC = U4  | IOSTANDARD = "LVDS_25"; # MGTRXN2_114	RX p|n swapped at snap12 end
+# Snap fiber11 mgt: gtx11/rx10
+NET "rxp[5]"		LOC = U3  | IOSTANDARD = "LVDS_25";     # MGTRXP2_114	RX p|n swapped at snap12 end
+NET "rxn[5]"		LOC = U4  | IOSTANDARD = "LVDS_25";     # MGTRXN2_114	RX p|n swapped at snap12 end
 
-# Snap fiber7 mgt: gtx2/rx11
+# Snap fiber12 mgt: gtx2/rx11
 NET "rxp[6]"		LOC = R3  | IOSTANDARD = "LVDS_25";	# MGTRXP3_114
 NET "rxn[6]"		LOC = R4  | IOSTANDARD = "LVDS_25";	# MGTRXN3_114
+
+#
+# Snap fiber5, gemRx0
+#NET "gemrxp[0]"		LOC = AG3  | IOSTANDARD = "LVDS_25";	# MTP fiber 5 on GTX4, Rx Only
+#NET "gemrxn[0]"		LOC = AG4  | IOSTANDARD = "LVDS_25";	#
+
+# Snap fiber6, gemRx1
+#NET "gemrxp[1]"		LOC = AF5  | IOSTANDARD = "LVDS_25";	# MTP fiber 6 on GTX5, Rx Only
+#NET "gemrxn[1]"		LOC = AF6  | IOSTANDARD = "LVDS_25";	#
+
+# Snap fiber7, gemRx2
+#NET "gemrxp[2]"		LOC = AE3  | IOSTANDARD = "LVDS_25";	# MTP fiber 7 on GTX6, Rx Only
+#NET "gemrxn[2]"		LOC = AE4  | IOSTANDARD = "LVDS_25";	#
+
+# Snap fiber8, gemRx3
+#NET "gemrxp[3]"		LOC = AC3  | IOSTANDARD = "LVDS_25";	# MTP fiber 8 on GTX7, Rx Only
+#NET "gemrxn[3]"		LOC = AC4  | IOSTANDARD = "LVDS_25";	#
+
+#
+# Snap fiber1, unused
+#NET "xtrarxp[0]"		LOC = AP5  | IOSTANDARD = "LVDS_25";	# MTP fiber 1, Rx on GTX0
+#NET "xtrarxn[0]"		LOC = AP6  | IOSTANDARD = "LVDS_25";	#
 
 #----------------------------------------------------------------------------------------------------------
 # IO Bank Impedances, just for reference, do not lock these pins
@@ -874,7 +896,7 @@ NET "led_mezD8"				SLEW=FAST | DRIVE=4;
 #----------------------------------------------------------------------------------------------------------
 # Timing
 #----------------------------------------------------------------------------------------------------------
-NET "tmb_clock0"	TNM_NET = "tmb_clock0";	# TMB main Clock
+NET "tmb_clock0"	TNM_NET = "tmb_clock0";	# TMB main Clock  JRG: this is really tmb_clock05p on the baseboard!  *stoppable*
 TIMESPEC "TS_tmb_clock0" = PERIOD "tmb_clock0"  25.0 ns HIGH 50%;
 
 NET "clock_160" 	TNM_NET = "clock_160";	# GTX clock
