Add files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,48 @@
-### ModelSim ###
-work/
-!work/_info
-*.mti
-*.wlf
-*.bak
-*.do
-source/simulation/commands/*out.txt
-
-### ISE ###
-xlnx_auto_0_xdb/
-iseconfig/
-_xmsgs/
-_ngo/
-xst/
-*.syr
-*.map
-*.mrp
-*.ncd
-*.ngm
-*.xrpt
-*.csv
-*.html
-*.gise
-*.log
-*.bld
-*.cmd_log
-*.lso
+*.swo
+*.swp
 *.ngc
-*.ngd
-*.ngr
+*.lso
 *.prj
 *.stx
+*.syr
 *.xst
-*.ini
-*.xml
-*.pad
-*.par
-*.pcf
-*.ptwx
+*.html
+*.uroutes
 *.twr
 *.twx
-*.unroutes
-*.ut
+*.ncd
+*.pcf
+*.par
+*.ngd
+*.cmd_log
+*.cmd
+*.xmsgs
+*.pad
+*.ngr
+*.bld
+*.gise
+*.log
+*.xml
+*.exe
+*.swn
+*.swl
+*.swm
+*.tcl
+*.bld
+*.ngr
+*.ptwx
 *.xpi
-*pad.txt
-*.bgn
-*.xwbt
-*.drc
-*.bit
-*.mcs
-*.cfi
-*.prm
-
-### Other ###
-*~
-*#
+*.map
+*.mrp
+*.ngm
+work/*
+*.veo
+*.asy
+*.ncf
+*.cpg
+*.xdc
+*.swj
+*.swk
+ipcore_dir/*
+extra/*
+iseconfig/*
