--- a/source/otmb_virtex6_pinout.ucf
+++ b/source/otmb_virtex6_pinout.ucf
@@ -734,27 +734,25 @@ NET "rxn[5]"		LOC = U4  | IOSTANDARD = "LVDS_25";     # MGTRXN2_114	RX p|n swapp
 NET "rxp[6]"		LOC = R3  | IOSTANDARD = "LVDS_25";	# MGTRXP3_114
 NET "rxn[6]"		LOC = R4  | IOSTANDARD = "LVDS_25";	# MGTRXN3_114
 
-#
 # Snap fiber5, gemRx0
-#NET "gemrxp[0]"		LOC = AG3  | IOSTANDARD = "LVDS_25";	# MTP fiber 5 on GTX4, Rx Only
-#NET "gemrxn[0]"		LOC = AG4  | IOSTANDARD = "LVDS_25";	#
+NET "gemrxp[0]"		LOC = AG3  | IOSTANDARD = "LVDS_25";	# MTP fiber 5 on GTX4, Rx Only
+NET "gemrxn[0]"		LOC = AG4  | IOSTANDARD = "LVDS_25";	#
 
 # Snap fiber6, gemRx1
-#NET "gemrxp[1]"		LOC = AF5  | IOSTANDARD = "LVDS_25";	# MTP fiber 6 on GTX5, Rx Only
-#NET "gemrxn[1]"		LOC = AF6  | IOSTANDARD = "LVDS_25";	#
+NET "gemrxp[1]"		LOC = AF5  | IOSTANDARD = "LVDS_25";	# MTP fiber 6 on GTX5, Rx Only
+NET "gemrxn[1]"		LOC = AF6  | IOSTANDARD = "LVDS_25";	#
 
 # Snap fiber7, gemRx2
-#NET "gemrxp[2]"		LOC = AE3  | IOSTANDARD = "LVDS_25";	# MTP fiber 7 on GTX6, Rx Only
-#NET "gemrxn[2]"		LOC = AE4  | IOSTANDARD = "LVDS_25";	#
+NET "gemrxp[2]"		LOC = AE3  | IOSTANDARD = "LVDS_25";	# MTP fiber 7 on GTX6, Rx Only
+NET "gemrxn[2]"		LOC = AE4  | IOSTANDARD = "LVDS_25";	#
 
 # Snap fiber8, gemRx3
-#NET "gemrxp[3]"		LOC = AC3  | IOSTANDARD = "LVDS_25";	# MTP fiber 8 on GTX7, Rx Only
-#NET "gemrxn[3]"		LOC = AC4  | IOSTANDARD = "LVDS_25";	#
+NET "gemrxp[3]"		LOC = AC3  | IOSTANDARD = "LVDS_25";	# MTP fiber 8 on GTX7, Rx Only
+NET "gemrxn[3]"		LOC = AC4  | IOSTANDARD = "LVDS_25";	#
 
-#
 # Snap fiber1, only used by emulator board in some test stands
-NET "xtrarxp[0]"		LOC = AP5  | IOSTANDARD = "LVDS_25";	# MTP fiber 1, Rx on GTX0
-NET "xtrarxn[0]"		LOC = AP6  | IOSTANDARD = "LVDS_25";	#
+#NET "xtrarxp[0]"		LOC = AP5  | IOSTANDARD = "LVDS_25";	# MTP fiber 1, Rx on GTX0
+#NET "xtrarxn[0]"		LOC = AP6  | IOSTANDARD = "LVDS_25";	#
 
 #----------------------------------------------------------------------------------------------------------
 # IO Bank Impedances, just for reference, do not lock these pins
