--- a/source/otmb_virtex6_pinout_MEX1.ucf
+++ b/source/otmb_virtex6_pinout_MEX1.ucf
@@ -1,6 +1,6 @@
 #----------------------------------------------------------------------------------------------------------
 #
-# TMB2012 UCF for Virtex6 XC6VLX195T prototype mezzanine card schematic 2012 rev 3
+# TMB2019 UCF(ME234/1) for Virtex6 XC6VLX195T prototype mezzanine card schematic 2012 rev 3
 #
 #----------------------------------------------------------------------------------------------------------
 # 10/19/2010 Port to Virtex6
@@ -707,7 +707,7 @@ NET "bpi_cs" LOC = "Y24"; # // BPI Flash PROM Chip Enable
 # SNAP12 receivers
 #-------------------------------------------------------------------------------------------------------------------
 #
-# Snap fiber1, unused
+# Snap fiber1, CFEB0 in firmware code
 NET "rxp[0]"		LOC = AP5  | IOSTANDARD = "LVDS_25";	# MTP fiber 1, Rx on GTX0
 NET "rxn[0]"		LOC = AP6  | IOSTANDARD = "LVDS_25";	#
 
@@ -724,19 +724,19 @@ NET "rxp[3]"		LOC = AJ3 | IOSTANDARD = "LVDS_25";	# MGTRXP3_112
 NET "rxn[3]"		LOC = AJ4 | IOSTANDARD = "LVDS_25";	# MGTRXN3_112
 
 #
-# Snap fiber5, gemRx0
+# Snap fiber5, CFEB4 in firmware code
 NET "rxp[4]"		LOC = AG3  | IOSTANDARD = "LVDS_25";	# MTP fiber 5 on GTX4, Rx Only
 NET "rxn[4]"		LOC = AG4  | IOSTANDARD = "LVDS_25";	#
 
-# Snap fiber6, gemRx1
+# Snap fiber6, gemRx0?
 #NET "gemrxp[1]"		LOC = AF5  | IOSTANDARD = "LVDS_25";	# MTP fiber 6 on GTX5, Rx Only
 #NET "gemrxn[1]"		LOC = AF6  | IOSTANDARD = "LVDS_25";	#
 
-# Snap fiber7, gemRx2
+# Snap fiber7, gemRx1?
 #NET "gemrxp[2]"		LOC = AE3  | IOSTANDARD = "LVDS_25";	# MTP fiber 7 on GTX6, Rx Only
 #NET "gemrxn[2]"		LOC = AE4  | IOSTANDARD = "LVDS_25";	#
 
-# Snap fiber8, gemRx3
+# Snap fiber8, gemRx2?
 #NET "gemrxp[3]"		LOC = AC3  | IOSTANDARD = "LVDS_25";	# MTP fiber 8 on GTX7, Rx Only
 #NET "gemrxn[3]"		LOC = AC4  | IOSTANDARD = "LVDS_25";	#
 
